--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a href="https://replit.com/@RayanShamsi" target="_blank"><img src="assets/images/replit-white.svg"
                     alt="Replit Profile" /></a>
               </li>
-              <li class="list-inline-item youtube"><a href="https://www.youtube.com/@Riptanger" target="_blank"><i
+              <li class="list-inline-item youtube"><a href="https://www.youtube.com/@ImRipt" target="_blank"><i
                     class="fab fa-youtube"></i></a></li>
               <li class="list-inline-item github"><a href="https://github.com/RiptCodes" target="_blank"><i
                     class="fab fa-github"></i></a>
@@ -93,6 +93,7 @@
           <div class="section-inner shadow-sm rounded">
             <h2 class="heading">Work Experience</h2>
             <div class="content">
+
 
               <div class="item row">
                 <a class="col-md-2 col-sm-2 col-4" href="https://www.michaelkors.co.uk/" target="_blank">
@@ -245,7 +246,7 @@
                         alt="Arnold" /></a>
                   </div>
                 
-              
+
               </ul>
             </div>
             <!--//content-->
@@ -258,6 +259,12 @@
           <div class="section-inner shadow-sm rounded">
             <h2 class="heading">Education</h2>
             <div class="content">
+              <div class="item">
+                <h3 class="title"><i class="fas fa-graduation-cap"></i>University</h3>
+                <h4 class="university">Computer Science</h4>
+                <h4 class="university">University of Reading<span
+                        class="year"> (2023-2026)</span></h4>
+              </div>
               <div class="item">
                 <h3 class="title"><i class="fas fa-graduation-cap"></i>A level</h3>
                 <h4 class="university">Computer Science, Maths, Economics</h4>
