Added more projects

--- a/index.html
+++ b/index.html
@@ -168,6 +168,14 @@
                 <p><a class="more-link" href="https://github.com/RiptCodes/2dFighter" target="_blank"><i
                       class="fas fa-external-link-alt"></i> Visit Github Repo</a></p>
               </div>
+              <div class="col col-12 col-md-5 rounded">
+                <h5 class="title">
+                  Reddit Scraper
+                </h5>
+                <p class="summary">Features chromium and scrapes the reddit website to fulfil the users needs.</p>
+                <p><a class="more-link" href="https://github.com/RiptCodes/RedditBot" target="_blank"><i
+                        class="fas fa-external-link-alt"></i> Visit Github Repo</a></p>
+              </div>
               <!--//item-->
               
             </div>
@@ -303,12 +311,12 @@
                   <h3 class="level-title">HTML/CSS & Bootstrap</h3>
                 </div>
                 <div class="item">
-                  <h3 class="level-title">NodeJS</h3>
+                  <h3 class="level-title">C/C++</h3>
                 </div>
                 <!--//item-->
                 <!--//item-->
                 <div class="item">
-                  <h3 class="level-title">ReactJS</h3>
+                  <h3 class="level-title">NodeJS</h3>
                 </div>
                 <!--//item-->
                 <div class="item">
@@ -316,11 +324,11 @@
                 </div>
                 <!--//item-->
                 <div class="item">
-                  <h3 class="level-title">Esport player</h3>
+                  <h3 class="level-title">Esports</h3>
                 </div>
                 <!--//item-->
                 <div class="item">
-                  <h3 class="level-title">Premiere Pro</h3>
+                  <h3 class="level-title">Video Editing & Uploading</h3>
                 </div>
                 <!--//item-->
                  
@@ -344,7 +352,7 @@
   <footer class="footer">
     <div class="container text-center">
       <small class="copyright">Copyright © 2023 Rayan Shamsi | <a href="https://replit.com/@RayanShamsi" target="_blank"
-          style="color: lightblue">Built, Sourced, and Hosted on Replit</a></small>
+          style="color: lightblue">Built, Sourced, and Hosted on Git</a></small>
     </div>
     <!--//container-->
   </footer>
