Added more projects

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <div class="section-inner shadow-sm rounded">
             <h2 class="heading">About Me</h2>
             <div class="content">
-              <p>I am a hard working, passionate, motivated Student who likes to keep busy and explore new exciting things. I am constantly working to improve my work and consistently asking others for help and support. I love listening to music and playing tournaments in games (Esports) and thrive to develop myself.</p>
+              <p>I am a hard working, passionate, motivated Student who likes to keep busy and explore new exciting things. I am constantly working to improve my work and consistently asking others for help and support. I love listening to music and going gym.</p>
              
             </div>
             <!--//content-->
@@ -94,6 +94,7 @@
             <h2 class="heading">Work Experience</h2>
             <div class="content">
 
+              
 
               <div class="item row">
                 <a class="col-md-2 col-sm-2 col-4" href="https://www.michaelkors.co.uk/" target="_blank">
@@ -147,6 +148,12 @@
             <h2 class="heading">Projects</h2>
             <div class="row">
 
+              <div class="col col-12 col-md-5 rounded">
+                <h5 class="title">JQuery Simon Game </h5>
+                <p class="summary">Developed an intuitive memory game that can be customised.</p>
+                <p><a class="more-link" href="https://github.com/RiptCodes/Simon-Game" target="_blank"><i
+                      class="fas fa-external-link-alt"></i> Visit Github Repo</a></p>
+              </div>
               <div class="col col-12 col-md-5 rounded">
                 <h5 class="title">Discord Music Bot </h5>
                 <p class="summary">Developed a chatbot & musicbot which scrapes the internet for the requested songs and returns a queue and song/playlist.</p>
