--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col">
-          <img class="profile-image img-fluid float-start" src="assets/images/profile.png"
+          <img class="profile-image img-fluid float-start" src="assets/images/Subject.png"
             style="width: 180px; height: 180px;" alt="Rayan Shamsi" />
           <div class="profile-content">
             <h1 class="name">Rayan Shamsi</h1>
