--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col">
-          <img class="profile-image img-fluid float-start rounded-circle" src="assets/images/profile.png"
+          <img class="profile-image img-fluid float-start rounded-circle" src="assets/images/Subject.png"
             style="width: 180px; height: 180px;" alt="Rayan Shamsi" />
           <div class="profile-content">
             <h1 class="name">Rayan Shamsi</h1>
@@ -73,7 +73,7 @@
   </header>
   <!--//header-->
 
-  <iframe src="https://docs.google.com/document/d/147Q9O0WoOJpMaHENJjHB5KAkB06_WfD2jBTaTi8z5yY/preview" width="100%" height="1200px" allow="autoplay"></iframe>
+  <iframe src="hhttps://docs.google.com/document/d/1pM_0-7jRiusHa6WItlkyAtYWqj6HXZl3xtQQ1mXtMAk/edit?tab=t.0/preview" width="100%" height="1200px" allow="autoplay"></iframe>
 
   <!-- ******FOOTER****** -->
   <footer class="footer">
