Changed Border for PFP & preview for resume

--- a/resume.html
+++ b/resume.html
@@ -73,7 +73,7 @@
   </header>
   <!--//header-->
 
-  <iframe src="hhttps://docs.google.com/document/d/1pM_0-7jRiusHa6WItlkyAtYWqj6HXZl3xtQQ1mXtMAk/edit?tab=t.0/preview" width="100%" height="1200px" allow="autoplay"></iframe>
+  <iframe src="https://docs.google.com/document/d/1pM_0-7jRiusHa6WItlkyAtYWqj6HXZl3xtQQ1mXtMAk/preview" width="100%" height="1200px" allow="autoplay"></iframe>
 
   <!-- ******FOOTER****** -->
   <footer class="footer">
