Fixed Home button

--- a/resume.html
+++ b/resume.html
@@ -62,7 +62,7 @@
             </div>
           </div>
           <!--//dark-mode-switch-->
-          <a class="btn btn-cta-primary" href="/index.html"><i
+          <a class="btn btn-cta-primary" href="https://riptcodes.github.io/resume/index.html"><i
               class="fa fa-house"></i> Home</a>
         </div>
         <!--//col-->
