--- a/resume.html
+++ b/resume.html
@@ -73,12 +73,12 @@
   </header>
   <!--//header-->
 
-  <iframe src="https://docs.google.com/document/d/1pM_0-7jRiusHa6WItlkyAtYWqj6HXZl3xtQQ1mXtMAk/preview" width="100%" height="1200px" allow="autoplay"></iframe>
+  <iframe src="https://docs.google.com/document/d/1uNgxVG0BrAi1aOHLl6m5QYlNw5rx0o4DaVtg-P0AKPM/preview" width="100%" height="1200px" allow="autoplay"></iframe>
 
   <!-- ******FOOTER****** -->
   <footer class="footer">
     <div class="container text-center">
-      <small class="copyright">Copyright © 2024 Rayan Shamsi | <a href="https://replit.com/@RayanShamsi" target="_blank" style="color: lightblue">Built, Sourced, and Hosted on Replit</a></small>
+      <small class="copyright">Copyright © 2024 Rayan Shamsi | <a href="https://replit.com/@RayanShamsi" target="_blank" style="color: lightblue"></a></small>
     </div>
     <!--//container-->
   </footer>
