--- a/resume.html
+++ b/resume.html
@@ -8,89 +8,47 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="favicon.ico">
-
-  <link href='https://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet'
-    type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-
-  <!-- FontAwesome JS -->
-  <script defer src="assets/fontawesome/js/all.js"></script>
-
-  <!-- Global CSS -->
-  <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
-
-  <!-- Theme CSS -->
-  <link id="theme-style" rel="stylesheet" href="assets/css/styles.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
-  <!-- ******HEADER****** -->
-  <header class="header">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col">
-          <img class="profile-image img-fluid float-start rounded-circle" src="assets/images/Subject.png"
-            style="width: 180px; height: 180px;" alt="Rayan Shamsi" />
-          <div class="profile-content">
-            <h1 class="name">Rayan Shamsi</h1>
-            <h2 class="desc">Progammer & Student</h2>
-            <ul class="social list-inline">
-              <li class="list-inline-item linkedin"><a href="https://uk.linkedin.com/in/rayan-shamsi-003263250?trk=people-guest_people_search-card" target="_blank"><i
-                    class="fab fa-linkedin-in"></i></a></li>
-              <li class="list-inline-item replit">
-                <a href="https://replit.com/@RayanShamsi" target="_blank"><img src="assets/images/replit-white.svg"
-                    alt="Replit Profile" /></a>
-              </li>
-              <li class="list-inline-item youtube"><a href="https://www.youtube.com/@Riptanger" target="_blank"><i
-                    class="fab fa-youtube"></i></a></li>
-              <li class="list-inline-item github"><a href="https://github.com/RiptCodes" target="_blank"><i
-                    class="fab fa-github"></i></a>
-              </li>
-              
-              </li>
-            </ul>
+ <div class="container">
+    <header>
+      <div class="hero-top">
+        <div class="profile-box">
+          <img src="assets/images/dfd.PNG" alt="Rayan Shamsi" class="profile-img">
+          <div class="name-section">
+            <h1>Rayan Shamsi</h1>
+            <p>Programmer & Student</p>
           </div>
-          <!--//profile-->
         </div>
-        <!--//col-->
-        <div class="col-12 col-md-auto">
-          <div class="dark-mode-switch d-flex">
-            <div class="form-check form-switch mx-auto mx-md-0">
-              <input type="checkbox" class="form-check-input me-2" id="darkSwitch" />
-              <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
-            </div>
-          </div>
-          <!--//dark-mode-switch-->
-          <a class="btn btn-cta-primary" href="https://riptcodes.github.io/resume/index.html"><i
-              class="fa fa-house"></i> Home</a>
+        <div class="controls">
+          <button class="theme-btn" onclick="toggleTheme()">🌙 Dark Mode</button>
+          <a href="resume.html" class="resume-btn">📄 Resume</a>
         </div>
-        <!--//col-->
       </div>
-      <!--//row-->
-    </div>
-    <!--//container-->
-  </header>
-  <!--//header-->
+      <div class="socials">
+        <a href="https://uk.linkedin.com/in/rayan-shamsi-003263250" target="_blank" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://replit.com/@RayanShamsi" target="_blank" title="Replit"><i class="fas fa-code"></i></a>
+        <a href="https://www.youtube.com/@Riptanger" target="_blank" title="YouTube"><i class="fab fa-youtube"></i></a>
+        <a href="https://www.instagram.com/@FreshlyAFK" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
+        <a href="https://github.com/RiptCodes" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+      </div>
+    </header>
 
   <iframe src="https://docs.google.com/document/d/1uNgxVG0BrAi1aOHLl6m5QYlNw5rx0o4DaVtg-P0AKPM/preview" width="100%" height="1200px" allow="autoplay"></iframe>
+    <footer>
+      <p>&copy; <span id="year"></span> Rayan Shamsi. All rights reserved.</p>
+    </footer>
 
-  <!-- ******FOOTER****** -->
-  <footer class="footer">
-    <div class="container text-center">
-      <small class="copyright">Copyright © 2024 Rayan Shamsi | <a href="https://replit.com/@RayanShamsi" target="_blank" style="color: lightblue"></a></small>
-    </div>
-    <!--//container-->
-  </footer>
-  <!--//footer-->
+   <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
 
-  <!-- Javascript -->
-  <script type="text/javascript" src="assets/plugins/popper.min.js"></script>
-  <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="assets/plugins/vanilla-rss/dist/rss.global.min.js"></script>
-  <script type="text/javascript" src="assets/plugins/dark-mode-switch/dark-mode-switch.min.js"></script>
-  <!-- custom js -->
-  <script type="text/javascript" src="assets/js/main.js"></script>
+    function toggleTheme() {
+      document.body.classList.toggle('dark');
+    }
+  </script>
 </body>
 
 </html>
