Change Style to match other part of site

--- a/resume.html
+++ b/resume.html
@@ -25,7 +25,7 @@
         </div>
         <div class="controls">
           <button class="theme-btn" onclick="toggleTheme()">🌙 Dark Mode</button>
-          <a href="resume.html" class="resume-btn">📄 Resume</a>
+          <a href="index.html" class="resume-btn">Home 📄</a>
         </div>
       </div>
       <div class="socials">
