--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section id="about">
       <h2>About Me</h2>
       <div class="box">
-        <p>I'm a passionate and motivated computer science student with a drive to build, learn, and grow. I constantly work on improving my craft, seek out challenges, and enjoy blending creativity with logic. Outside of coding, I love music and going to the gym.</p>
+        <p>I'm a passionate and motivated computer science student with a drive to build, learn, and grow.</p>
       </div>
     </section>
 
